[tool.poetry]
name = "dtmm-task-4"
version = "69.0.0"
description = "Įvadas į duomenų tyrybą ir mašininį mokymąsi. 3 užduotis: Klasterizavimo algoritmų analizė"
authors = ["Igor <egor@sgf.lt>"]

[tool.poetry.dependencies]
python = ">=3.11,<=3.12"
pandas = "^2.1.2"
numpy = "^1.26.1"
seaborn = "^0.13.0"
matplotlib = "^3.8.1"
scikit-learn = "^1.3.2"
jupyter = "^1.0.0"
ipykernel = "^6.26.0"
umap-learn = "^0.5.4"

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
ignore = ["E402"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
